--- a/apps/web-landing/package.json
+++ b/apps/web-landing/package.json
@@ -16,6 +16,7 @@
 	"dependencies": {
 		"@radix-ui/react-accordion": "^1.2.11",
 		"@radix-ui/react-checkbox": "^1.3.2",
+		"@radix-ui/react-navigation-menu": "^1.2.14",
 		"@radix-ui/react-select": "^2.2.5",
 		"@radix-ui/react-slot": "^1.2.3",
 		"class-variance-authority": "^0.7.1",
