--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -20,6 +20,7 @@
     "./types": "./src/types.ts",
     "./crypto-utils": "./src/crypto-utils.ts",
     "./i18n-typed": "./src/i18n-typed.ts",
+    "./colors": "./src/colors.ts",
     ".": "./src/index.ts"
   }
 }
