--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@auth/core": "^0.40.0",
     "@convex-dev/auth": "^0.0.81",
+    "@convex-dev/expo-push-notifications": "^0.2.5",
     "@convex-dev/resend": "^0.1.10",
     "@repo/utils": "workspace:*",
     "convex": "^1.23.0",
