--- a/apps/mobile-consumer/package.json
+++ b/apps/mobile-consumer/package.json
@@ -32,12 +32,15 @@
     "expo-audio": "~0.4.8",
     "expo-blur": "~14.1.5",
     "expo-camera": "~16.1.11",
+    "expo-constants": "~17.1.7",
     "expo-dev-client": "~5.2.4",
+    "expo-device": "~7.1.4",
     "expo-image": "~2.4.0",
     "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.7",
     "expo-localization": "~16.1.6",
     "expo-location": "~18.1.6",
+    "expo-notifications": "~0.31.4",
     "expo-secure-store": "~14.2.3",
     "expo-splash-screen": "~0.30.10",
     "expo-system-ui": "~5.0.6",
