Update subscription page

--- a/apps/mobile-consumer/ios/KymaClub/Info.plist
+++ b/apps/mobile-consumer/ios/KymaClub/Info.plist
@@ -65,6 +65,8 @@
     <string>This app uses your location to show your position on the map.</string>
     <key>NSMicrophoneUsageDescription</key>
     <string>Allow $(PRODUCT_NAME) to access your microphone</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>Allow $(PRODUCT_NAME) to access your photos</string>
     <key>UILaunchStoryboardName</key>
     <string>SplashScreen</string>
     <key>UIRequiredDeviceCapabilities</key>
