--- a/apps/mobile-consumer/package.json
+++ b/apps/mobile-consumer/package.json
@@ -17,6 +17,7 @@
     "@gorhom/bottom-sheet": "^5.1.8",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/cli": "latest",
+    "@react-native-community/slider": "4.5.6",
     "@react-navigation/bottom-tabs": "^7.1.1",
     "@react-navigation/elements": "^2.2.3",
     "@react-navigation/native": "^7.0.12",
@@ -36,6 +37,8 @@
     "expo-dev-client": "~5.2.4",
     "expo-device": "~7.1.4",
     "expo-image": "~2.4.0",
+    "expo-image-manipulator": "^13.1.7",
+    "expo-image-picker": "^16.1.4",
     "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.7",
     "expo-localization": "~16.1.6",
