--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -17,6 +17,9 @@
       "ES2021",
       "dom"
     ],
+    "types": [
+      "node"
+    ],
     "forceConsistentCasingInFileNames": true,
     "module": "ESNext",
     "isolatedModules": true,
