--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -14,11 +14,13 @@
     "test:coverage": "vitest run --coverage --coverage.reporter=text"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^2.0.24",
     "@auth/core": "^0.40.0",
     "@convex-dev/auth": "^0.0.81",
     "@convex-dev/expo-push-notifications": "^0.2.5",
     "@convex-dev/resend": "^0.1.10",
     "@repo/utils": "workspace:*",
+    "ai": "^5.0.34",
     "convex": "^1.23.0",
     "convex-helpers": "^0.1.101",
     "date-fns": "^4.1.0",
