Update expo version

--- a/apps/mobile-consumer/ios/KymaClub/Info.plist
+++ b/apps/mobile-consumer/ios/KymaClub/Info.plist
@@ -42,6 +42,8 @@
     <string>1</string>
     <key>GMSApiKey</key>
     <string>AIzaSyBnVtiwgGAlcoaWMZfUaaC6rG6dOCmH9ig</string>
+    <key>ITSAppUsesNonExemptEncryption</key>
+    <false/>
     <key>LSMinimumSystemVersion</key>
     <string>12.0</string>
     <key>LSRequiresIPhoneOS</key>
@@ -67,6 +69,8 @@
     <string>Allow $(PRODUCT_NAME) to access your microphone</string>
     <key>NSPhotoLibraryUsageDescription</key>
     <string>Allow $(PRODUCT_NAME) to access your photos</string>
+    <key>RCTNewArchEnabled</key>
+    <true/>
     <key>UILaunchStoryboardName</key>
     <string>SplashScreen</string>
     <key>UIRequiredDeviceCapabilities</key>
