--- a/apps/mobile-consumer/app.json
+++ b/apps/mobile-consumer/app.json
@@ -17,7 +17,8 @@
       "supportsTablet": true,
       "bundleIdentifier": "com.kymaclub.app",
       "infoPlist": {
-        "NSLocationWhenInUseUsageDescription": "This app uses your location to show your position on the map."
+        "NSLocationWhenInUseUsageDescription": "This app uses your location to show your position on the map.",
+        "ITSAppUsesNonExemptEncryption": false
       },
       "config": {
         "googleMapsApiKey": "AIzaSyBnVtiwgGAlcoaWMZfUaaC6rG6dOCmH9ig"
@@ -34,7 +35,13 @@
         "googleMaps": {
           "apiKey": "AIzaSyBnVtiwgGAlcoaWMZfUaaC6rG6dOCmH9ig"
         }
-      }
+      },
+      "permissions": [
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.ACCESS_FINE_LOCATION",
+        "android.permission.RECORD_AUDIO",
+        "android.permission.MODIFY_AUDIO_SETTINGS"
+      ]
     },
     "web": {
       "favicon": "./assets/favicon.png"
