--- a/apps/web-consumer/package.json
+++ b/apps/web-consumer/package.json
@@ -4,7 +4,7 @@
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
-		"dev": "vite --port 5175",
+		"devNO": "vite --port 5175",
 		"build": "tsc -b && vite build",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
 		"preview": "pnpm run build && vite preview",
@@ -69,6 +69,6 @@
 		"typescript": "~5.8.3",
 		"typescript-eslint": "^8.34.1",
 		"vite": "^7.0.0",
-		"wrangler": "^4.24.3"
+		"wrangler": "^4.37.1"
 	}
 }
