Refactor and consolidate user and business settings

--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -21,6 +21,7 @@
     "./crypto-utils": "./src/crypto-utils.ts",
     "./i18n-typed": "./src/i18n-typed.ts",
     "./colors": "./src/colors.ts",
-    "./credits": "./src/credits.ts"
+    "./credits": "./src/credits.ts",
+    "./exploreFilters": "./src/exploreFilters.ts"
   }
 }
