--- a/apps/mobile-consumer/eas.json
+++ b/apps/mobile-consumer/eas.json
@@ -6,13 +6,25 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "env": {
+        "EXPO_PUBLIC_CONVEX_URL": "",
+        "EXPO_PUBLIC_CONVEX_SITE_URL": ""
+      }
     },
     "preview": {
-      "distribution": "internal"
+      "distribution": "internal",
+      "env": {
+        "EXPO_PUBLIC_CONVEX_URL": "",
+        "EXPO_PUBLIC_CONVEX_SITE_URL": ""
+      }
     },
     "production": {
-      "autoIncrement": true
+      "autoIncrement": true,
+      "env": {
+        "EXPO_PUBLIC_CONVEX_URL": "",
+        "EXPO_PUBLIC_CONVEX_SITE_URL": ""
+      }
     }
   },
   "submit": {
