--- a/apps/mobile-consumer/eas.json
+++ b/apps/mobile-consumer/eas.json
@@ -6,25 +6,13 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal",
-      "env": {
-        "EXPO_PUBLIC_CONVEX_URL": "",
-        "EXPO_PUBLIC_CONVEX_SITE_URL": ""
-      }
+      "distribution": "internal"
     },
     "preview": {
-      "distribution": "internal",
-      "env": {
-        "EXPO_PUBLIC_CONVEX_URL": "",
-        "EXPO_PUBLIC_CONVEX_SITE_URL": ""
-      }
+      "distribution": "internal"
     },
     "production": {
-      "autoIncrement": true,
-      "env": {
-        "EXPO_PUBLIC_CONVEX_URL": "",
-        "EXPO_PUBLIC_CONVEX_SITE_URL": ""
-      }
+      "autoIncrement": true
     }
   },
   "submit": {
