--- a/apps/mobile-consumer/eas.json
+++ b/apps/mobile-consumer/eas.json
@@ -11,11 +11,19 @@
     "preview": {
       "distribution": "internal"
     },
+    "preview-testflight": {
+      "distribution": "store",
+      "autoIncrement": true,
+      "channel": "preview",
+      "extends": "preview"
+    },
     "production": {
+      "distribution": "store",
       "autoIncrement": true
     }
   },
   "submit": {
+    "preview-testflight": {},
     "production": {}
   }
 }
