--- a/apps/mobile-consumer/package.json
+++ b/apps/mobile-consumer/package.json
@@ -56,7 +56,8 @@
     "react-native-edge-to-edge": "^1.1.3",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-maps": "^1.20.1",
-    "react-native-mmkv": "^3.3.0",
+    "react-native-mmkv": "^4.0.0",
+    "react-native-nitro-modules": "^0.31.2",
     "react-native-reanimated": "^4.1.1",
     "react-native-reanimated-carousel": "^4.0.3",
     "react-native-safe-area-context": "5.6.1",
