--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -18,6 +18,7 @@
     "@auth/core": "^0.40.0",
     "@convex-dev/auth": "^0.0.90",
     "@convex-dev/expo-push-notifications": "^0.2.5",
+    "@convex-dev/rate-limiter": "^0.2.14",
     "@convex-dev/resend": "^0.1.10",
     "@repo/utils": "workspace:*",
     "ai": "^5.0.34",
