--- a/apps/web-business/package.json
+++ b/apps/web-business/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite --port 5173",
-    "build": "tsc -b && vite build",
+    "build": "NODE_ENV=production tsc --project tsconfig.build.json && vite build",
+    "build:strict": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "pnpm run build && vite preview",
     "deploy": "pnpm run build && wrangler deploy",
