--- a/.github/workflows/deploy-web-business.yml
+++ b/.github/workflows/deploy-web-business.yml
@@ -44,7 +44,10 @@ jobs:
           VITE_CONVEX_URL: ${{ secrets.VITE_CONVEX_URL }}
 
       - name: Deploy to Cloudflare Workers
-        run: pnpm --filter @repo/web-business deploy
+        run: |
+          cd apps/web-business
+          pnpm run build
+          npx wrangler deploy
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
