--- a/.github/workflows/deploy-web-business.yml
+++ b/.github/workflows/deploy-web-business.yml
@@ -47,7 +47,7 @@ jobs:
         run: |
           cd apps/web-business
           pnpm run build
-          npx wrangler deploy
+          npx wrangler deploy --var VITE_CONVEX_URL="${{ secrets.VITE_CONVEX_URL }}"
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
