--- a/.github/workflows/deploy-web-business.yml
+++ b/.github/workflows/deploy-web-business.yml
@@ -46,8 +46,7 @@ jobs:
       - name: Deploy to Cloudflare Workers
         run: |
           cd apps/web-business
-          pnpm run build
-          npx wrangler deploy --var VITE_CONVEX_URL="${{ secrets.VITE_CONVEX_URL }}"
+          npx wrangler deploy
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
