Fix production translations

--- a/apps/web-business/package.json
+++ b/apps/web-business/package.json
@@ -83,12 +83,14 @@
     "@playwright/test": "^1.54.2",
     "@repo/eslint-config": "workspace:*",
     "@tanstack/router-plugin": "^1.127.8",
+    "@types/glob": "^8.1.0",
     "@types/node": "^24.1.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react-swc": "^3.10.2",
     "dotenv": "^16.4.7",
     "eslint": "^9.29.0",
+    "glob": "^11.0.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.2.0",
