--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -20,6 +20,7 @@
     "@convex-dev/expo-push-notifications": "^0.2.5",
     "@convex-dev/rate-limiter": "^0.2.14",
     "@convex-dev/resend": "^0.1.10",
+    "@google/genai": "^1.30.0",
     "@repo/utils": "workspace:*",
     "ai": "^5.0.34",
     "convex": "^1.27.3",
