--- a/apps/web-internal/package.json
+++ b/apps/web-internal/package.json
@@ -58,6 +58,7 @@
     "react": "^19.0.0",
     "react-day-picker": "^9.9.0",
     "react-dom": "^19.0.0",
+    "recharts": "^3.1.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "vaul": "^1.1.2"
@@ -75,9 +76,9 @@
     "@vitejs/plugin-react-swc": "^3.10.2",
     "dotenv": "^16.4.7",
     "eslint": "^9.29.0",
-    "glob": "^11.0.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "glob": "^11.0.0",
     "globals": "^16.2.0",
     "tw-animate-css": "^1.3.5",
     "typescript": "~5.8.3",
