--- a/apps/web-business/package.json
+++ b/apps/web-business/package.json
@@ -26,6 +26,7 @@
     "@fullcalendar/react": "^6.1.18",
     "@fullcalendar/timegrid": "^6.1.18",
     "@hookform/resolvers": "^5.1.1",
+    "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
@@ -90,9 +91,9 @@
     "@vitejs/plugin-react-swc": "^3.10.2",
     "dotenv": "^16.4.7",
     "eslint": "^9.29.0",
-    "glob": "^11.0.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "glob": "^11.0.0",
     "globals": "^16.2.0",
     "tw-animate-css": "^1.3.5",
     "typescript": "~5.8.3",
