Introduce questionnaires and widgets

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -45,6 +45,7 @@
     "./types/credit": "./types/credit.ts",
     "./types/notification": "./types/notification.ts",
     "./types/questionnaire": "./types/questionnaire.ts",
+    "./types/widget": "./types/widget.ts",
     "./operations/payments": "./operations/payments.ts",
     "./operations/questionnaire": "./operations/questionnaire.ts",
     "./utils/deep-linking": "./utils/deep-linking.ts",
