--- a/apps/web-landing/package.json
+++ b/apps/web-landing/package.json
@@ -31,6 +31,7 @@
 		"react-i18next": "^15.6.1",
 		"react-router": "7.6.3",
 		"recharts": "^3.1.0",
+		"resend": "^4.5.1",
 		"tailwind-merge": "^3.3.1"
 	},
 	"devDependencies": {
